# codex-skill-factory

./: .gitignore  AGENTS.md  README.md
.codex/: hooks.json
.codex/hooks/: log_post_tool_use.py  log_turn_stop.py  log_user_prompt.py
Test/skill-case-100-prompts/: dashboard.html
Test/skill-case-100-prompts/data/: analytics.json  candidates.json  dashboard.json  prompts_100.jsonl  report.md  summary.json  tool_uses.jsonl  turns.jsonl
Test/skill-case-100-prompts/generated-skills/fix-failing-tests/: SKILL.md  candidate.json
Test/skill-case-100-prompts/generated-skills/fix-lint-type-errors/: SKILL.md  candidate.json
Test/skill-case-100-prompts/generated-skills/generate-release-notes/: SKILL.md  candidate.json
dev-plan/: implement_20260501_221130.md  implement_20260501_222122.md  implement_20260503_083127.md  implement_20260503_114217.md  implement_20260503_141238.md  implement_20260503_144711.md
docs/: README.md  codex_prompt_skill_factory_dev_doc.md  codex_prompt_skill_factory_product_plan_expert_review.md  skill_template_spec.md
tools/codex-skill-factory/: pyproject.toml
tools/codex-skill-factory/skill_factory/: __init__.py  analytics.py  approvals.py  cli.py  dashboard.py  enrichment.py  hook_handlers.py  quality.py  rules.py  similarity.py  spec_compiler.py  storage.py
tools/codex-skill-factory/skill_factory/templates/: SKILL.md.j2
tools/codex-skill-factory/tests/: test_analytics.py  test_cli.py  test_dashboard.py  test_enrichment.py  test_quality.py  test_rules.py  test_similarity.py  test_spec_compiler.py  test_storage.py
(+8 files in other folders)
